# btc-contract-backtest

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GITHUB_GUIDE.md  IMMEDIATE_NEXT_STEPS.md  LICENSE  PHASES_COMPLETED.md  PROJECT_READY.md  README.md  README_PROJECT.md  SKILL.md  mypy.ini  paper_state.json  pyproject.toml  requirements-dev.txt  requirements-research.txt  requirements-runtime.txt  requirements.txt  run_dashboard.sh  setup.py  setup.sh
config/: testnet_default.yaml
docs/: architecture.md  t3-order-state-machine-plan.md
documentations/: gate-b-testnet-progression-plan.md  gate-c-supervised-mainnet-pilot-plan.md  gate-c-supervised-testnet-pilot-plan.md  release-and-go-live-checklists.md  system-correctness-and-live-readiness-report-2026-03-30.md
frontend/: package-lock.json  package.json
research/: baseline_comparison.py  baseline_comparison_v2.py  calibration_validation.py  governance_cli.py  live_incident_report.py  live_readiness_check.py  live_runbook.md  module_attribution.py  overlay_vs_flat.py  shadow_audit_tools.py  shadow_review_report.py  short_only_walk_forward.py  short_overlay_search.py  sparse_portfolio_attribution.py  sparse_portfolio_backtest.py  sparse_portfolio_walk_forward.py  systematic_exit_search.py  walk_forward_validation.py  walk_forward_validation_v2.py  walk_forward_validation_v3.py
scripts/: backtest_engine.py  backtest_report.py  comprehensive_backtest.py  demo_all_features.py  generate_gate_c_readiness_bundle.py  main.py  optimization.py  release_gate.py  risk_management.py  run_best_strategy_report.py  (+4 more)
(+201 files in other folders)
