[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-contract-backtest"
version = "5.0.0"
description = "BTC perpetual/futures backtesting, paper trading, and governed live-trading engine"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "OpenClaw Workspace" }
]
dependencies = [
  "ccxt>=4.0.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0",
  "flake8>=6.1.0",
  "mypy>=1.5.0",
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.1.0",
]
research = [
  "plotly>=5.18.0",
  "jupyter>=1.0.0",
  "scikit-learn>=1.3.0",
  "statsmodels>=0.14.0",
]

[project.scripts]
btc-backtest = "btc_contract_backtest.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", ".venv", "__pycache__", "build", "dist", "src/btc_contract_backtest.egg-info"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
warn_unused_configs = true
exclude = "(?x)(^build/|^dist/|^src/btc_contract_backtest\\.egg-info/)"
